--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   collection: ^1.19.0
   home_widget: ^0.7.0
   fl_chart: ^0.70.0
+  flutter_overlay_window: ^0.4.5
 
 dev_dependencies:
   flutter_test:
