--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fin_track
-description: "A financial tracker app"
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.9.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,22 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   easy_dynamic_theme: ^2.3.1
-  sqflite: ^2.4.1
-  path: ^1.9.0
-  reorderable_grid_view: ^2.2.8
-  intl: ^0.18.1
-  #path_provider: ^2.1.5
-  #permission_handler: ^11.3.1
-  file_picker: ^8.1.6
-  android_alarm_manager_plus: ^4.0.5
-  local_auth: ^2.3.0
-  flutter_sticky_header: ^0.7.0
-  collection: ^1.19.0
-  home_widget: ^0.7.0
-  fl_chart: ^0.70.0
-  #flutter_overlay_window: ^0.4.5
-  fluttertoast: ^8.2.10
+  path: ^1.9.1
+  sqflite: ^2.4.2
+  file_picker: ^10.3.3
+  fluttertoast: ^9.0.0
+  home_widget: ^0.8.1
+  intl: ^0.20.2
+  reorderable_grid_view: ^2.2.6
+  fl_chart: ^1.1.1
+  flutter_sticky_header: ^0.8.0
+  collection: ^1.19.1
+  local_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,15 +58,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.2
-
+  flutter_launcher_icons: ^0.14.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
   image_path: "assets/icon.png"
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/icon.png"
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -85,11 +80,6 @@ flutter:
   assets:
     - assets/icon.png
     - assets/big_icon.png
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
