--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   fl_chart: ^1.1.1
   flutter_sticky_header: ^0.8.0
   collection: ^1.19.1
+  shared_preferences: ^2.5.2
+  http: ^1.2.2
   local_auth: ^3.0.0
 
 dev_dependencies:
